# gimbal_shoot

./: README.md
src/: CMakeLists.txt
src/config/: laser.json  rect.json
src/include/: capture.hpp  common.hpp  serial.hpp  uart.hpp
src/src/: image_preprocess.cpp  shoot.cpp  target.cpp
src/src/detection/: laser_detection.cpp  rect_detection.cpp
src/tools/: camera_display.cpp  color_detect.cpp  hsv_detect.cpp  laser_detect.cpp  rect_detect.cpp  uart_test.cpp
